--- a/css-alex/scss-partials/_navbar.scss
+++ b/css-alex/scss-partials/_navbar.scss
@@ -1,6 +1,6 @@
 // This partial contains all the styles relative to the navbar (so in this case topbar and off canvas menu
 .top-bar-container {
-    top: 145px;
+    top: 125px;
 
     a {
         color: $color-white;
